src/test/deca/syntax/invalid/obtained_res/DeclVarDansIfElsesynt.res
./src/test/deca/syntax/invalid/created/testGeneraux/DeclVarDansIfElse.deca:12:12: no viable alternative at input 'z'
